frontend/antlr4/MiniC.g4
grammar MiniC;

// 词法规则名总是以大写字母开头

// 语法规则名总是以小写字母开头

// 每个非终结符尽量多包含闭包、正闭包或可选符等的EBNF范式描述

// 若非终结符由多个产生式组成，则建议在每个产生式的尾部追加# 名称来区分，详细可查看非终结符statement的描述

// 语法规则描述：EBNF范式

// 源文件编译单元定义
compileUnit: (funcDef | varDecl)* EOF;

// 函数定义，目前不支持形参，也不支持返回void类型等
funcDef: T_INT T_ID T_L_PAREN T_R_PAREN block;

// 语句块看用作函数体，这里允许多个语句，并且不含任何语句
block: T_L_BRACE blockItemList? T_R_BRACE;

// 每个ItemList可包含至少一个Item
blockItemList: blockItem+;

// 每个Item可以是一个语句，或者变量声明语句
blockItem: statement | varDecl;

// 变量声明，目前不支持变量含有初值
varDecl: basicType varDef (T_COMMA varDef)* T_SEMICOLON;

// 基本类型
basicType: T_INT;

// 变量定义
varDef: T_ID;

// 目前语句支持return和赋值语句
statement:
	T_RETURN expr T_SEMICOLON			# returnStatement
	| lVal T_ASSIGN expr T_SEMICOLON	# assignStatement
	| block								# blockStatement
	| expr? T_SEMICOLON					# expressionStatement
	| ifelseExpr						# ifelseStatement;

// ifelse语句块(暂时不支持else if)
ifelseExpr: T_IF T_L_PAREN cond T_R_PAREN block (T_ELSE block)?;

// if/while 条件判断块
cond: expr;

// 表达式文法 expr : 支持逻辑运算、关系运算、算术运算
expr: logicBinaryExp;

// 运算优先级：算术 > 关系 > 逻辑

// 算术表达式
arithmeticExp: addExp;

// 二元关系表达式(大于、小于、等于...)
relationalBinaryExp:
	arithmeticExp (relationalBinaryOp arithmeticExp)*;

// 二元逻辑表达式，优先级 && > ||
logicBinaryExp: logicAndExp (T_OR logicAndExp)*;

logicAndExp: relationalBinaryExp (T_AND relationalBinaryExp)*;

// 加减表达式，操作数为乘除取余表达式，表示乘除取余操作优先级高于加减
addExp: mulExp (addOp mulExp)*;

// 乘除取余表达式
mulExp: unaryExp (mulOp unaryExp)*;

// 加减运算符
addOp: T_ADD | T_SUB;

// 乘除取余运算符
mulOp: T_MUL | T_DIV | T_MOD;

// 二元关系运算符
relationalBinaryOp:
	T_EQUAL
	| T_NOT_EQUAL
	| T_GREATER
	| T_LESSER
	| T_GREATER_EQUAL
	| T_LESSER_EQUAL;

// 二元布尔运算符
logicBinaryOp: T_AND | T_OR;

// 通用一元表达式
normalUnaryExp: unaryOp (primaryExp | normalUnaryExp);

// 一元运算符
unaryOp: T_SUB | T_NOT;

// 一元表达式 逻辑非和一元求负优先级相同，右结合
unaryExp:
	primaryExp
	| T_ID T_L_PAREN realParamList? T_R_PAREN
	| normalUnaryExp;

// 基本表达式：括号表达式、整数、左值表达式
primaryExp:
	T_L_PAREN expr T_R_PAREN
	| T_DIGIT
	| T_OCT_DIGIT
	| T_HEX_DIGIT
	| lVal;

// 实参列表
realParamList: expr (T_COMMA expr)*;

// 左值表达式
lVal: T_ID;

// 用正规式来进行词法规则的描述

T_L_PAREN: '(';
T_R_PAREN: ')';
T_SEMICOLON: ';';
T_L_BRACE: '{';
T_R_BRACE: '}';

T_ASSIGN: '=';
T_COMMA: ',';

T_ADD: '+';
T_SUB: '-';

T_MUL: '*';
T_DIV: '/';
T_MOD: '%';

T_AND: '&&';
T_OR: '||';
T_NOT: '!';
T_EQUAL: '==';
T_NOT_EQUAL: '!=';
T_GREATER: '>';
T_LESSER: '<';
T_GREATER_EQUAL: '>=';
T_LESSER_EQUAL: '<=';

// 要注意关键字同样也属于T_ID，因此必须放在T_ID的前面，否则会识别成T_ID
T_RETURN: 'return';
T_INT: 'int';
T_VOID: 'void';
T_IF: 'if';
T_ELSE: 'else';

T_ID: [a-zA-Z_][a-zA-Z0-9_]*;
T_DIGIT: '0' | [1-9][0-9]*;
T_OCT_DIGIT: '0' ('0' | [1-7][0-7]*);
T_HEX_DIGIT: ('0x' | '0X') ('0' | [0-9a-fA-F]+);

/* 空白符丢弃，包括注释 */
WS: [ \r\n\t]+ -> skip;
LINE_COMMENT: '//' ~[\r\n]* -> channel(HIDDEN);
BLOCK_COMMENT: '/*' .*? '*/' -> channel(HIDDEN);
